tdf#152774 Fix incorrect result with MATCH.

Use case now complies with ODF 6.9.14 (MATCH).
Added use case to unit test.

Change-Id: I749a979135fbc01a3bb1583092fb6d6a100e2d2d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144883
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>